# algae

./: Cargo.toml  LICENSE
src/: algaeset.rs  group.rs  lib.rs  magma.rs  mapping.rs  mappings.rs
